--- a/styleIndex.css
+++ b/styleIndex.css
@@ -171,5 +171,13 @@
     outline: none;
 }
 
+/* Fonte da página comodato*/
+
+.coiny-regular {
+    font-family: "Coiny", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 
 
